Updated the link

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>My Website</title>
 </head>
 <body>
-    <a href="www.rumeso.live">Rumeso International</a>
+    <a href="https://www.rumeso.live">Rumeso International</a>
 </body>
 </html>
